--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
-.img-container{
-width: 30px;
-height: 30px;
+.img-container {
+    width: 30px;
+    height: 30px;
 }
 
-img{
+img {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.gray {
+    filter: grayscale(1) !important;
 }
